# e_grid

./: BORROW_CHECKER_FIXES.md  CHANGELOG.md  Cargo.toml  DEMO_GUIDE.md  ENHANCED_EVENTS_SUMMARY.md  EVENT_DRIVEN_ARCHITECTURE.md  FOCUS_INTEGRATION_SUMMARY.md  FOCUS_TRACKING_DEMO_COMPLETE.md  IMPROVEMENTS.md  IPC_CLIENT_BACKUP.md  LAST_RELEASE  LOG_BASED_TUI_CONTAINMENT.md  README.md  WINDOW_POSITIONING_FIX.md  client_output.txt  demo_focus_tracking.bat  demo_focus_tracking.sh  demo_launcher.bat  fixed_handle_window_details.rs  focus_demo.bat  focus_demo.sh  lib.rs  output_cc_prompts.txt  output_cc_suggestions.txt  quick_test.bat  realtime_monitor_grid.rs  run_animated_demo.bat  run_demos.bat  run_history.txt  run_realtime_monitor.bat  run_report.md  server_output.txt  simple_grid.rs  start_focus_demo.bat  test_client_simple.bat  test_does_not_exist_fix.bat  test_dynamic_grid.bat  test_enhanced_events.bat  test_focus_debug.bat  test_focus_demo.bat  (+12 more)
docs/: GRIDCLIENT_IMPROVEMENTS.md  GRID_CLIENT_IMPROVEMENTS.md
documents/: CLIENT_RECONNECTION_IMPROVEMENTS.md  DASHMAP_MIGRATION_COMPLETE.md  FOCUS_INTEGRATION_COMPLETE.md  IPC_PROTOCOL_GUIDE.md  LIBRARY.md  LOCKING_FIX_APPROACH.md  LOCK_FREE_IMPLEMENTATION.md  README.md  run_report.md
examples/: README.md  animate_new_windows_rotate_4x4grid.rs  animate_new_windows_rotate_grid_optimal.rs  animate_rotate_grid_demo.rs  animate_windows_10secs_per_monitor.rs  animate_windows_optimal_across_all_monitors.rs  basic_example.rs  basic_grid.rs  comprehensive_focus_demo.rs  debug_monitor_coords.bat  debug_monitor_coords.rs  e_midi_demo.rs  enhanced_grid_client.rs  fixed_background_monitoring.rs  focus_callback_example.rs  focus_client_test.rs  focus_demo_server.rs  focus_music_demo.rs  focus_tracking_demo.rs  grid_client_clean.rs  grid_client_demo.rs  grid_demo.rs  grid_layout_client_demo.rs  ipc_demo.rs  ipc_demo_new.rs  ipc_server_demo.rs  ipc_server_demo_new.rs  ipc_test.rs  lib.rs  lib_new.rs  monitor_test.rs  move_rotate_grid_demo.rs  move_windows_then_back.rs  realtime_monitor_grid.rs  robust_grid_client.rs  run_comprehensive_demo.bat  run_demos.bat  run_dynamic_transitions.bat  run_event_driven_demo.bat  simple_focus_demo.rs  (+36 more)
src/: basic_example.rs  basic_grid.rs  debug_positions.rs  e_grid.rs  focus_client_test.rs  grid_client_clean.rs  grid_client_config.rs  grid_client_demo.rs  grid_client_errors.rs  grid_display.rs  heartbeat.rs  ipc.rs  ipc_client.rs  ipc_client_tests.rs  ipc_demo.rs  ipc_demo_new.rs  ipc_manager.rs  ipc_protocol.rs  ipc_server.rs  ipc_server_demo.rs  ipc_server_demo_fixed.rs  ipc_server_demo_new.rs  ipc_test.rs  lib.rs  lockfree_window_methods.rs  lockfree_windows.rs  lockfree_windows_trait.rs  main.rs  monitor_grid.rs  monitor_test.rs  performance_monitor.rs  simple_grid.rs  simple_grid_new.rs  simple_monitor_test.rs  simple_test.rs  spatial_midi_bridge.rs  test_animated_transitions.rs  test_bounds_demo.rs  test_comprehensive_window_management.rs  test_dynamic_grid.rs  (+8 more)
tests/: README.md  ipc_monitor_list.rs  ipc_protocol_fuzz_tests.rs  ipc_protocol_integration_tests.rs  ipc_protocol_tests.rs
(+18 files in other folders)
