[package]
name = "e_grid"
version = "0.1.0"
edition = "2021"
description = "A real-time, multi-monitor window grid management and tracking system for Windows."

[dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "processthreadsapi", "shellapi", "consoleapi", "errhandlingapi"] }
crossterm = "0.27"
iceoryx2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dashmap = "5.5"
once_cell = "1.19"
ctrlc = "3.0"
ratatui = "0.28"
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
ringbuf = "0.4.8"

[[bin]]
name = "e_grid"
path = "src/main.rs"