[package]
name = "e_grid"
version = "0.1.3"
edition = "2021"
description = "A real-time, multi-monitor window grid management and tracking system for Windows."
authors = ["David Horner"]
repository = "https://github.com/davehorner/e_grid/"
homepage = "https://github.com/davehorner/e_grid/"
documentation = "https://github.com/davehorner/e_grid#readme"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["windows", "grid", "window-management", "tui", "ipc"]
categories = [
  "gui",
  "accessibility",
  "command-line-utilities",
  "os::windows-apis",
]

[dependencies]
winapi = { version = "0.3", features = [
  "winuser",
  "libloaderapi",
  "processthreadsapi",
  "shellapi",
  "consoleapi",
  "errhandlingapi",
] }
crossterm = "0.29"
iceoryx2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
dashmap = "6.1"
once_cell = "1.19"
ctrlc = "3.0"
ratatui = "0.29"
log = "0.4"
env_logger = "0.11"
#bincode = "1.3"
ringbuf = "0.4.8"
crossbeam-queue = "0.3.12"
heapless = "0.8.0"
atomic = "0.6.1"
crossbeam-utils = "0.8.21"
lazy_static = "1.5.0"

[[bin]]
name = "e_grid"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.2.0"
e_midi = "0.1.10"
# e_midi = { path = "../e_midi" }
[workspace]
